--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Quiz</title>
+    <title>Math Quiz</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
 
-<div header>
+<div header id = "header">
     <h2 id="highscores">View High Scores</h2>
-    <h2 id="timer">Time: </h2>
-    <h2 id="score">Score: </h2>
+    
 </div>
 
-<container id="contentarea">
+<div id="contentarea">
 <!-- toggle-able area to hold each screen's content     -->
-</container>
+</div>
 
     
 
